-= Changelog =-
-= Done =-
0.2
+ Web interface
~ Replace function os.system to subproccess
0.1
+ Ping
+ WakeUp
+ Shutdown (Windows Station only)
0.0.2
+ Karma : history of operations
0.0.1
~ Correct problem with case in device name