@@ -3,22 +3,22 @@
 
 __docformat__ = 'epytext en'
 
-###################################################################### 
-## Constants 
-###################################################################### 
-VERSION = "0.1"
+######################################################################
+## Constants
+######################################################################
+VERSION = "0.2"
 
-###################################################################### 
-## Imports 
-###################################################################### 
+######################################################################
+## Imports
+######################################################################
 
 from optparse import OptionParser
 import string
 import logging
 
-###################################################################### 
+######################################################################
 ## Django Initiatlization
-###################################################################### 
+######################################################################
 
 from django.core.management import setup_environ
 import settings
@@ -30,9 +30,9 @@ from bodhi.choices import *
 from lib.device import wake_on_lan, shutdown, ping
 from lib.karma import Karma
 
-###################################################################### 
+######################################################################
 ## Program options
-###################################################################### 
+######################################################################
 usage = "usage: %prog [options] NIC"
 description = "Manage a network device"
 version = "%prog " + VERSION
@@ -46,9 +46,9 @@ parser.add_option("-w", "--wol",
 parser.add_option("-s", "--shutdown",
                   action="store_true", dest="shutdown", default=False,
                   help="Make a shutdown of the device.")
-parser.add_option("-i", "--history", 
+parser.add_option("-i", "--history",
                   action="store_true", dest="history", default=False,
-                  help="Display history.")                  
+                  help="Display history.")
 parser.add_option("-v", "--verbose",
                   action="store_true", dest="verbose", default=False,
                   help="Print status messages to stdout.")
@@ -57,24 +57,24 @@ parser.add_option("-v", "--verbose",
 
 if len(args) == 0 :
     parser.error("Please specify a NIC.")
-    
-###################################################################### 
-## Logging & History
-###################################################################### 
 
-if options.verbose :    
+######################################################################
+## Logging & History
+######################################################################
+
+if options.verbose :
     log_level=logging.DEBUG
 else:
     log_level=logging.WARNING
-logging.basicConfig(format='%(levelname)s:%(asctime)s:%(message)s', 
+logging.basicConfig(format='%(levelname)s:%(asctime)s:%(message)s',
             level=log_level,
             datefmt='%H:%M:%S')
 
 hf = Karma()
 
-###################################################################### 
+######################################################################
 ## Main
-###################################################################### 
+######################################################################
 
 logging.info("Searching devices %s*..." % args[0])
 devices = Device.objects.filter(name__istartswith=string.upper(args[0]))
@@ -95,7 +95,7 @@ for device in devices :
             except Exception as e:
                 logging.error("Exception %s" % e)
                 hf.save(device, 2, -1)
-            finally:
+            else:
                 hf.save(device, 2, 0)
     elif options.wol :
         if (device.wakeup == False) :
@@ -107,12 +107,12 @@ for device in devices :
             except Exception as e:
                 logging.error("Exception %s" % e)
                 hf.save(device, 1, -1)
-            finally:
+            else:
                 hf.save(device, 1, 0)
     elif options.history :
         record = History.objects.filter(device=device).latest('timestamp')
-        print("%s %s @ %s -> %s " % 
-              (ACTION_TYPES_CHOICES[record.action][1], record.device.name, 
+        print("%s %s @ %s -> %s " %
+              (ACTION_TYPES_CHOICES[record.action][1], record.device.name,
                str(record.timestamp)[:19], RESULTS_CODE[record.result][1]))
     else:
         try:
@@ -120,7 +120,7 @@ for device in devices :
         except Exception as e:
             logging.error("Exception %s" % e)
             hf.save(device, 0, -1)
-        finally:
+        else:
             hf.save(device, 0, not isUp)
         if isUp :
             print("Device %s is up." % device.name)
