@@ -2,6 +2,7 @@
 -= Done =-
 0.2
 + Web interface
++ History command
 ~ Replace function os.system to subproccess
 0.1
 + Ping
